<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp.sam.roughdiamondcalc.Settings">

    <TextView
        android:id="@+id/percentage_text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:padding="@dimen/general_padding"/>

    <com.comp.sam.roughdiamondcalc.view.RangeSeekBar
        android:id="@+id/percentage_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_color="#8990C4"
        app:bar_highlight_color="#2434AD"
        app:corner_radius="10"
        app:data_type="_integer"
        app:gap="20"
        app:left_thumb_color="#1A246D"
        app:left_thumb_color_pressed="#030B47"
        app:max_value="100"
        app:min_value="0"
        app:right_thumb_color="#1A246D"
        app:right_thumb_color_pressed="#030B47" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/size_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:padding="@dimen/general_padding"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/size_settings_min"
            android:layout_width="@dimen/labour_value_width"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/label_text"
            android:layout_toRightOf="@id/size_settings_text"
            android:layout_toEndOf="@id/size_settings_text"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/size_settings_max"
            android:layout_width="@dimen/labour_value_width"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/label_text"
            android:layout_toEndOf="@id/size_settings_min"
            android:layout_toRightOf="@id/size_settings_min"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/polished_weight_text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polished_weight"
        android:padding="@dimen/general_padding"/>

    <com.comp.sam.roughdiamondcalc.view.RangeSeekBar
        android:id="@+id/polished_weight_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_color="#8990C4"
        app:bar_highlight_color="#2434AD"
        app:corner_radius="10"
        app:data_type="_integer"
        app:gap="20"
        app:left_thumb_color="#1A246D"
        app:left_thumb_color_pressed="#030B47"
        app:max_value="100"
        app:min_value="0"
        app:right_thumb_color="#1A246D"
        app:right_thumb_color_pressed="#030B47" />

    <TextView
        android:id="@+id/less_text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/less"
        android:padding="@dimen/general_padding"/>

    <com.comp.sam.roughdiamondcalc.view.RangeSeekBar
        android:id="@+id/less_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_color="#8990C4"
        app:corner_radius="1"
        app:data_type="_integer"
        app:gap="10"
        app:max_value="100"
        app:min_value="0"/>

</LinearLayout>
